// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavGroup Test > Snapshot > Active 1`] = `
<button
  aria-controls="generalMenu"
  aria-haspopup="false"
  class="Item active"
  data-testid="bezier-react-nav-group"
  role="menuitem"
  type="button"
>
  <div
    class="LeftIconWrapper"
  >
    <svg
      class="Icon margin"
      data-testid="bezier-react-nav-group-left-icon"
      fill="none"
      height="20"
      style="--b-icon-color: var(--bgtxt-blue-normal);"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <span
    class="Text typo-14 truncated margin"
    data-testid="bezier-react-text"
  >
    test-content
  </span>
  <div
    class="RightContentWrapper"
  >
    <svg
      class="Icon margin"
      data-testid="bezier-react-icon"
      fill="none"
      height="16"
      style="--b-icon-color: var(--bgtxt-orange-normal);"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</button>
`;

exports[`NavGroup Test > Snapshot > Not active 1`] = `
<button
  aria-controls="generalMenu"
  aria-haspopup="false"
  class="Item active"
  data-testid="bezier-react-nav-group"
  role="menuitem"
  type="button"
>
  <div
    class="LeftIconWrapper"
  >
    <svg
      class="Icon margin"
      data-testid="bezier-react-nav-group-left-icon"
      fill="none"
      height="20"
      style="--b-icon-color: var(--txt-black-dark);"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <span
    class="Text typo-14 truncated margin"
    data-testid="bezier-react-text"
  >
    test-content
  </span>
  <div
    class="RightContentWrapper"
  >
    <svg
      class="Icon margin"
      data-testid="bezier-react-icon"
      fill="none"
      height="16"
      style="--b-icon-color: var(--bgtxt-orange-normal);"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</button>
`;
